Fixing broken css

--- a/client/components/add-answer/add-answer.module.css
+++ b/client/components/add-answer/add-answer.module.css
@@ -3,17 +3,17 @@
   grid-template-rows: auto 1fr auto auto;
   padding: 20px;
   grid-gap: 10px;
+}
 
-  h2 {
-    color: var(--black-800);
-    font-size: 18px;
-    font-weight: 400;
-  }
+.container h2 {
+  color: var(--black-800);
+  font-size: 18px;
+  font-weight: 400;
+}
 
-  h3 {
-    font-size: 16px;
-    padding-top: 10px;
-  }
+.container h3 {
+  font-size: 16px;
+  padding-top: 10px;
 }
 
 .textarea {
