--- a/client/components/post/post-vote/post-vote.module.css
+++ b/client/components/post/post-vote/post-vote.module.css
@@ -9,15 +9,16 @@
 
 .voteButton {
   margin: 2px;
-  &:hover {
-    background-color: transparent;
-  }
-  
-  svg {
-    color: var(--black-200);
-    width: 36px;
-    height: 36px;
-  }
+}
+
+.voteButton::hover {
+  background-color: transparent;
+}
+
+.voteButton svg {
+  color: var(--black-200);
+  width: 36px;
+  height: 36px;
 }
 
 .voted {
