--- a/client/components/user-card/post-list/post-list.module.css
+++ b/client/components/user-card/post-list/post-list.module.css
@@ -4,11 +4,11 @@
   align-items: center;
   padding-bottom: 6px;
   border-bottom: 1px solid var(--black-100);
+}
 
-  h2 {
-    font-weight: 700;
-    font-size: 15px;
-  }
+.header h2 {
+  font-weight: 700;
+  font-size: 15px;
 }
 
 .notfound {
